# nucleusid

./: .dockerignore  .editorconfig  .env  .env.example  .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nuxt.config.js  package.json  pyproject.toml  stylelint.config.js
.drone/: docker.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
client/assets/scss/: _custom.scss  styles.scss
client/components/: Account.vue  AccountModal.vue  BaseButton.vue  BaseCheckbox.vue  BaseDropdown.vue  BaseIcon.vue  BaseInput.vue  BaseModal.vue  Card.vue  Heading.vue  Modal.vue  TheFooter.vue  TheHeader.vue  TheSidebar.vue
client/content/: about.json  about.md  privacy.md  terms.md
client/content/support/: blah-blah-blah.md  blah-blah.md  blah.md  database-design.md  distribution-of-work.md  ignore-these-files.md  issues.md  project-structure.md  read-me-first.md  reflections.md  security.md  technologies.md
client/layouts/: dashboard.vue  default.vue  error.vue
client/middleware/: user.js
client/pages/: about.vue  github.vue  index.vue  login.vue  logout.vue  privacy.vue  register.vue  terms.vue  verify.vue
client/pages/dashboard/: index.vue  settings.vue  shares.vue
client/plugins/: axios.js  content.js  utils.js
client/static/: robots.txt  site.webmanifest
client/store/: accounts.js  devices.js  folders.js  shares.js
config/: docker.env  nginx.conf
migrations/2021-09-02-042859_initialize_db/: down.sql  up.sql
migrations/2021-09-08-073748_add_indexes/: down.sql  up.sql
scripts/: database.sh  format.sh  lint.sh
server/: __init__.py  app.py  extensions.py  gunicorn.conf.py  pyproject.toml  wsgi.py
server/models/: __init__.py  account.py  device.py  folder.py  mixins.py  person.py  share.py
server/routes/: __init__.py  accounts.py  auth.py  devices.py  errors.py  folders.py  index.py  shares.py  user.py
server/templates/: login.jinja  register.jinja  share.jinja  verify.jinja
server/tests/: test_server.py
server/utils/: __init__.py  config.py  encryption.py  mail.py  security.py  snowflake.py
(+5 files in other folders)
